[package]
name = "ppoid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.83"
serde = "1.0.147"
serde_json = "1.0.87"